--- a/about.html
+++ b/about.html
@@ -7,23 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>愷迪研發科技股份有限公司 Kai Di R&D Technology Co., Ltd</title>
     <link rel="icon" href="./logo_icon.ico" type="image/x-icon">
-
-    <link rel='dns-prefetch' href='//fonts.googleapis.com' />
-
-    <link rel="stylesheet" href="CSS/normalize.css">
+    <!-- <link rel="stylesheet" href="CSS/normalize.css"> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- SEO -->
 
     <meta name="robots" content="index,follow,all" />
     <meta name="author" content="愷迪研發科技股份有限公司" />
-    <meta name="description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村 我們珍惜每一位夥伴的加入，除了未來前景,遠大的目標、也提供每位夥伴如何在你年輕的歲月裡就可以成就一番事業跟同儕不一樣，因為你不是「打工仔」 歡迎有夢想敢挑戰自己的朋友一起加入愷迪研發科技有限公司的工作行列。經營理念:以每個人都擁有無限的才能的理念看待每一件人,事,物,創新是這個世代的口號,也是成就你我必備的基本要素" />
+    <meta name="description"
+        content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村 我們珍惜每一位夥伴的加入，除了未來前景,遠大的目標、也提供每位夥伴如何在你年輕的歲月裡就可以成就一番事業跟同儕不一樣，因為你不是「打工仔」 歡迎有夢想敢挑戰自己的朋友一起加入愷迪研發科技有限公司的工作行列。經營理念:以每個人都擁有無限的才能的理念看待每一件人,事,物,創新是這個世代的口號,也是成就你我必備的基本要素" />
     <meta name="keywords" content="愷迪研發科技股份有限公司,愷迪研發,愷迪研發科技,愷迪,KaiDi,kaidi,kaidi-tech,研發科技,研發,科技" />
     <meta name="copyright" content="本網站著作權為 愷迪研發科技股份有限公司 所有" />
 
 
     <meta property="og:title" content="愷迪研發科技股份有限公司 | Kai Di R&D Technology Co., Ltd" />
-    <meta property="og:description" content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村 我們珍惜每一位夥伴的加入，除了未來前景,遠大的目標、也提供每位夥伴如何在你年輕的歲月裡就可以成就一番事業跟同儕不一樣，因為你不是「打工仔」 歡迎有夢想敢挑戰自己的朋友一起加入愷迪研發科技有限公司的工作行列。經營理念:以每個人都擁有無限的才能的理念看待每一件人,事,物,創新是這個世代的口號,也是成就你我必備的基本要素" />
+    <meta property="og:description"
+        content="愷迪研發科技有限公司,統編:50888679,地址:新北市三重區仁愛街315巷72號(1樓),負責人:葉俊村 我們珍惜每一位夥伴的加入，除了未來前景,遠大的目標、也提供每位夥伴如何在你年輕的歲月裡就可以成就一番事業跟同儕不一樣，因為你不是「打工仔」 歡迎有夢想敢挑戰自己的朋友一起加入愷迪研發科技有限公司的工作行列。經營理念:以每個人都擁有無限的才能的理念看待每一件人,事,物,創新是這個世代的口號,也是成就你我必備的基本要素" />
     <meta property="og:type" content="website" />
-    <meta property="og:locale" content="zh_TW"/>
+    <meta property="og:locale" content="zh_TW" />
     <meta property="og:url" content="https://www.kaidi-tech.com/">
     <meta property="og:img" content=" " />
     <!-- SEO -->
@@ -32,21 +33,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400&display=swap" rel="stylesheet">
+    <script src="./JS/index.js"></script>
     <link rel="stylesheet" href="CSS/style_header&footer.css">
-
-
-    <script>
-        var i = 1;
-        function nav_rwd() {          
-                        
-            i++;
-            var nav_none = document.getElementById('nav_none');
-            if (i % 2 == 0) { nav_none.style.display = 'block'; }
-            else { nav_none.style.display = 'none'; }
-
+    <style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+            list-style: none;
         }
+    </style>
 
-    </script>
+
 </head>
 
 <body>
@@ -58,95 +55,112 @@
                     <!-- <img src="img/資產 4.svg" srcset="img/資產 4.svg 500w, img/資產 6.svg 1000w" /> -->
                     <picture>
 
-                        <source media="(max-width: 600px)" srcset="https://kaidi-tech.com/img/logo_header_small.svg"
+                        <source media="(max-width: 768px)" srcset="https://kaidi-tech.com/img/logo_header_small.svg"
                             width="181px" height="150px" />
 
                         <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
 
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
-                </a></div>
-            <div class="header_group_right">
-                <ul class="head_item ">
+                </a>
+            </div>
+
+            <div class="burger_group">
+                <div class="language">
+                    <p>中文/English</p>
+                </div>
+
+                <div class="header_group_right">
+                    <ul>
+                        <li><a href="./index.html">
+                                <h6>首頁</h6>
+                                <p>HOME</p>
+                            </a>
+                        </li>
+                        <li><a href="./about.html">
+                                <h6>關於愷迪</h6>
+                                <p>ABOUT KD</p>
+                            </a>
+
+                        </li>
+                        <li><a href="./product.html">
+                                <h6>產品</h6>
+                                <p>PRODUCT</p>
+                            </a>
+
+                        </li>
+                        <li><a href="./contact.html">
+                                <h6>聯絡我們</h6>
+                                <p>CONTACT US</p>
+                            </a>
+
+                        </li>
+                    </ul>
+
+                    <div class="header_community ">
+                        <a href="https://www.facebook.com/">
+                            <div class="community_icon">
+                                <img src="./img/facebook_icon.svg " alt="facebook_img">
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/">
+                            <div class="community_icon">
+                                <img src="./img/instagram_icon.svg" alt="instagram_img">
+                            </div>
+                        </a>
+
+
+
+
+                    </div>
+
+                    <label for="burger">
+                        <img class="nav_rwd" type="button" src="./img/&Xi_icon.svg" alt="&Xi">
+                    </label>
+
+
+
+
+
+                </div>
+            </div>
+
+        </div>
+
+        </div>
+
+    </header>
+
+    <main>
+        <div>
+            <input type="checkbox" id="burger">
+            <div class="mnue">
+
+                <ul class="nav_mune">
                     <li><a href="./index.html">
                             <h6>首頁</h6>
-                            <p>HOME</p>
                         </a>
                     </li>
                     <li><a href="./about.html">
                             <h6>關於愷迪</h6>
-                            <p>ABOUT KD</p>
                         </a>
 
                     </li>
                     <li><a href="./product.html">
                             <h6>產品</h6>
-                            <p>PRODUCT</p>
                         </a>
-
                     </li>
                     <li><a href="./contact.html">
                             <h6>聯絡我們</h6>
-                            <p>CONTACT US</p>
                         </a>
-
                     </li>
                 </ul>
-
-                <div class="header_community ">
-
-                    <div class="community_icon"><a href="https://www.facebook.com/">
-                            <img src="./img/facebook_icon.svg " alt="facebook_img"> </a>
-                    </div>
-
-                    <a href="https://www.instagram.com/">
-                        <div class="community_icon">
-                            <img src="./img/instagram_icon.svg" alt="instagram_img">
-                        </div>
-                    </a>
-                    <div class="language">中文/English</div>
-
-
-                </div>
-
-
-                <button type="button" class="nav_rwd btn btn-outline-light text-dark" Onclick="nav_rwd()"><img src="./img/&Xi_icon.svg" width="150px" height="150px"
-                    alt="&Xi"></button>
-
             </div>
-
         </div>
-    </header>
 
-    <main>
 
-        <ul id="nav_none">
-            <li><a href="./index.html">
-                    <h6>首頁</h6>
 
-                </a>
-            </li>
-            <li><a href="./about.html">
-                    <h6>關於愷迪</h6>
-
-                </a>
-
-            </li>
-            <li><a href="./product.html">
-                    <h6>產品</h6>
-
-                </a>
-
-            </li>
-            <li><a href="./contact.html">
-                    <h6>聯絡我們</h6>
-
-                </a>
-
-            </li>
-        </ul>
-
-        <div style="width: 100vw;height: 100vh;display: flex;align-items:center;justify-content:center ">
+        <div style="height: 100vh;display: flex;align-items:center;justify-content:center ">
             <div style="text-align: center;">
                 <h3>愷迪研發科技有限公司</h3>
                 <h4>
@@ -169,9 +183,13 @@
 
     <footer>
         <div class="footer_group">
-            <div class="footer_logo"><img src="./img/logo_footer.svg" alt="kaidi_logo"></div>
+            <div class="footer_logo">
+                <img src="./img/logo_footer.svg" alt="kaidi_logo">
+            </div>
+
             <div class="footer_item">
-                <a href="#">
+
+                <!-- <a href="#">
                     <p>首頁</p>
                 </a>
                 <a href="#">
@@ -182,8 +200,34 @@
                 </a>
                 <a href="#">
                     <p>網站地圖</p>
-                </a>
+                </a> -->
+                <ul>
+                    <li>
+                        <a href="#">
+                            <p>首頁</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>隱私權政策</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>免責聲明</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <p>網站地圖</p>
+                        </a>
+                    </li>
+
+
+
+                </ul>
             </div>
+
 
             <div class="footer_community">
                 <p>我們的社群網站</p>
@@ -212,6 +256,7 @@
         </div>
 
     </footer>
+    <!-- <div style="background-color: green;height: 100px;"></div> -->
 
 
 
