--- a/about.html
+++ b/about.html
@@ -67,11 +67,7 @@
 
             <div class="burger_group">
                 <div class="language">
-                    <p>
-                        <a href="#">中文</a>/
-                        <a href="#">English</a>
-
-                    </p>
+                    <p>中文/English</p>
                 </div>
 
                 <div class="header_group_right">
@@ -103,12 +99,12 @@
 
                     <div class="header_community ">
                         <a href="https://www.facebook.com/">
-                            <div class="community_icon">
+                            <div>
                                 <img src="./img/facebook_icon.svg " alt="facebook_img">
                             </div>
                         </a>
                         <a href="https://www.instagram.com/">
-                            <div class="community_icon">
+                            <div >
                                 <img src="./img/instagram_icon.svg" alt="instagram_img">
                             </div>
                         </a>
