--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
                         </li>
                     </ul>
 
-                    <div class="header_community ">
+                    <div >
                         <a href="https://www.facebook.com/">
                             <div class="community_icon">
                                 <img src="./img/facebook_icon.svg " alt="facebook_img">
                             </div>
                         </a>
                         <a href="https://www.instagram.com/">
-                            <div class="community_icon">
+                            <div>
                                 <img src="./img/instagram_icon.svg" alt="instagram_img">
                             </div>
                         </a>
