--- a/product.html
+++ b/product.html
@@ -103,12 +103,12 @@
 
                     <div class="header_community ">
                         <a href="https://www.facebook.com/">
-                            <div class="community_icon">
+                            <div >
                                 <img src="./img/facebook_icon.svg " alt="facebook_img">
                             </div>
                         </a>
                         <a href="https://www.instagram.com/">
-                            <div class="community_icon">
+                            <div >
                                 <img src="./img/instagram_icon.svg" alt="instagram_img">
                             </div>
                         </a>
