--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <img src="./img/logo_footer.svg" alt="kaidi_logo">
             </div>
 
-            <div class="footer_item">
+            <!-- <div class="footer_item"> -->
 
                 <!-- <a href="#">
                     <p>首頁</p>
@@ -200,7 +200,7 @@
                 </a>
                 <a href="#">
                     <p>網站地圖</p>
-                </a> -->
+                </a> --> 
                 <ul>
                     <li>
                         <a href="#">
@@ -226,7 +226,7 @@
 
 
                 </ul>
-            </div>
+            <!-- </div> -->
 
 
             <div class="footer_community">
