--- a/index.html
+++ b/index.html
@@ -173,6 +173,20 @@
 
             </div>
 
+            <div class="footer_community_icon">
+                <div>
+                    <a href="https://www.facebook.com/">
+                        <img src="./img/facebook_icon.svg" alt="facebook_img"> </a>
+                </div>
+
+
+                <div>
+                    <a href="https://www.instagram.com/">
+                        <img src="./img/instagram_icon.svg" alt="instagram_img"> </a>
+                </div>
+
+            </div>
+
 
 
 
