--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
 
             <div class="footer_community_icon">
-                <div>
+                <div style="height: 200px;">
                     <a href="https://www.facebook.com/">
                         <img src="./img/facebook_icon.svg" alt="facebook_img"> </a>
                 </div>
