--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
 
                 <div>
                     <a href="https://www.instagram.com/">
-                        <img src="./img/instagram_icon.svg" alt="instagram_img"> </a>
+                      
                 </div>
 
-            </div>
+            </div>  <img src="./img/instagram_icon.svg" alt="instagram_img"> </a>
 
 
 
