--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
 
 
                 <div>
-                    <a href="https://www.instagram.com/">
+                   
                       
                 </div>
 
-            </div>  <img src="./img/instagram_icon.svg" alt="instagram_img"> </a>
+            </div>  <a href="https://www.instagram.com/"> <img src="./img/instagram_icon.svg" alt="instagram_img"> </a>
 
 
 
