--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                       
                 </div>
 
-            </div>  <a href="https://www.instagram.com/"> <img src="./img/instagram_icon.svg" alt="instagram_img"> </a>
+            </div>  <a href="https://www.instagram.com/"> <img style="height: 100px;width: 100px;" src="./img/instagram_icon.svg" alt="instagram_img"> </a>
 
 
 
