--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="header_community"  >
                         <a href="https://www.facebook.com/">
                             <div>
-                                <img src="./img/facebook_icon.svg " alt="facebook_img">
+                                <img src="./img/facebook_icon.svg" alt="facebook_img">
                             </div>
                         </a>
                         <a href="https://www.instagram.com/">
@@ -173,19 +173,7 @@
 
             </div>
 
-            <div class="footer_community_icon">
-                <div style="height: 200px;width: 200px;">
-                    <a href="https://www.facebook.com/">
-                        <img src="./img/facebook_icon.svg" alt="facebook_img"> </a>
-                </div>
-
-
-                <div>
-                   
-                      
-                </div>
-
-            </div>  <a href="https://www.instagram.com/"> <img style="height: 100px;width: 100px;" src="./img/instagram_icon.svg" alt="instagram_img"> </a>
+           <img style="width: 100px; height: 100px;" src="./img/facebook_icon.svg">
 
 
 
