--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
             </div>
 
-           <img style="width: 100px; height: 100px;" src="./img/facebook_icon.svg">
+           <embed style="width: 100px; height: 100px;" src="./img/facebook_icon.svg">
 
 
 
