--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
             </div>
 
            <embed style="width: 100px; height: 100px;" src="./img/facebook_icon.svg">
+            <embed style="width: 100px; height: 100px;" src="./img/iconfinder_instagram_1632517.svg">
 
 
 
