--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                 <h4>網站施工中...</h4>
 
             </div>
+            <img src="./img/facebook_icon.svg " width="100px" height="100px">
 
            
 
