--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
                     <div class="header_community"  >
                         <a href="https://www.facebook.com/">
                             <div>
-                                <embed src="./img/facebook_icon.svg" alt="facebook_img">
+                                <img src="./img/facebook_icon.svg" alt="facebook_img">
                             </div>
                         </a>
                         <a href="https://www.instagram.com/">
                             <div>
-                                <embed src="./img/instagram_icon.svg" alt="instagram_img">
+                                <img src="./img/instagram_icon.svg" alt="instagram_img">
                             </div>
                         </a>
 
@@ -237,13 +237,13 @@
                 <div class="footer_community_icon">
                     <div>
                         <a href="https://www.facebook.com/">
-                            <embed src="./img/facebook_icon.svg" alt="facebook_img"> </a>
+                            <img src="./img/facebook.svg" alt="facebook_img"> </a>
                     </div>
 
 
                     <div>
                         <a href="https://www.instagram.com/">
-                            <embed src="./img/instagram_icon.svg" alt="instagram_img"> </a>
+                            <img src="./img/instagram_icon.svg" alt="instagram_img"> </a>
                     </div>
 
                 </div>
