--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="footer_community_icon">
                     <div>
                         <a href="https://www.facebook.com/">
-                            <img src="./img/iconfinder_facebook_1632509.svg" alt="facebook_img"> </a>
+                            <img src="./img/facebook_icon.svg" alt="facebook_img"> </a>
                     </div>
 
 
