--- a/product.html
+++ b/product.html
@@ -43,6 +43,9 @@
         }
     </style>
 
+    <!-- 瀏覽人數 -->
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
 
 </head>
 
@@ -253,6 +256,16 @@
         <div class="footer_end">
             <p>© 2020 臺灣愷迪研發科技股份有限公司版權所有。 | Designed by Goldenman.<br>
                 衛部醫器輸字第027352號 衛部醫器輸字第027087號 北市衛器廣字第107120186號 北市衛器廣字第107080236號</p>
+                <div>
+                    <span id="busuanzi_container_site_pv">
+                        本站總訪問量<span id="busuanzi_value_site_pv"></span>次
+                    </span>
+                    
+                    
+                    <span id="busuanzi_container_site_uv">
+                      本站訪客數<span id="busuanzi_value_site_uv"></span>人次
+                    </span>
+                </div>
         </div>
 
     </footer>
