--- a/contact.html
+++ b/contact.html
@@ -288,7 +288,7 @@
         </div>
         </div>
         <div class="footer_end">
-            <p>© 2020 臺灣愷迪研發科技股份有限公司版權所有。 | Designed by Goldenman.<br>
+            <p>© 2020 臺灣愷迪研發科技股份有限公司版權所有。 | Designed by KD.<br>
                 </p>
                 <div>
                     <span id="busuanzi_container_site_pv">
