--- a/contact.html
+++ b/contact.html
@@ -177,8 +177,8 @@
 
             <div style="display: flex;align-items:center;justify-content:center ">
                 <div style=" text-align: center;width: 700px;">
-                    <div style="margin: 30px 0; position: relative;padding-bottom: 60%;overflow: hidden;z-index: -1;">
-                        
+                    <div style="margin: 30px 0; position: relative;padding-bottom: 60%;overflow: hidden;">
+                        <!-- z-index: -1; -->
                         <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14454.542733148292!2d121.4941663!3d25.0803343!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa77983cf5b8aba2e!2z5oS36L-q56CU55m856eR5oqA5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1620626675946!5m2!1szh-TW!2stw"
                               allowfullscreen=""
