--- a/product.html
+++ b/product.html
@@ -305,6 +305,33 @@
                         <img style="object-fit:cover;height: 100%;transform:translate(-20px) scale(0.7) " src="./照片/p_14.jpg ">
                     </div>
                 </div>
+                <div class="col-md-3">
+                    <div>
+                        <img style="object-fit:cover;height: 100%;transform: scale(0.8) " src="./照片/p_15.jpg ">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img style="object-fit:cover;height: 100%;transform:translate(-60px) scale(0.8) " src="./照片/p_16.jpg ">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img style="object-fit:cover;height: 100%;transform:translate(-25px) scale(0.9) " src="./照片/p_17.jpg ">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img style="object-fit:cover;height: 100%;transform:translate(-35px) scale(0.8) " src="./照片/p_18.jpg ">
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img style="object-fit:cover;height: 100%;transform:translate(-5px) " src="./照片/p_19.jpg ">
+                    </div>
+                </div>
+
+
 
 
 
