--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         }
     </style>
     <!-- 瀏覽人數 -->
-    <!-- <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
     <!-- VUE -->
 
