--- a/about.html
+++ b/about.html
@@ -58,10 +58,9 @@
                     <!-- <img src="img/資產 4.svg" srcset="img/資產 4.svg 500w, img/資產 6.svg 1000w" /> -->
                     <picture>
 
-                        <source media="(max-width: 768px)" srcset="https://kaidi-tech.com/img/logo_header_small.svg"
-                            width="181px" height="150px" />
+                        <source srcset="https://www.kaidi-tech.com/img/2022LOGO-3.svg" media="(max-width: 1050px)">
 
-                        <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
+                        <img src="img/logo_top.svg" alt="kaidi_logo">
 
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
@@ -191,7 +190,7 @@
     <footer>
         <div class="footer_group">
             <div class="footer_logo">
-                <img src="./img/logo_footer.svg" alt="kaidi_logo">
+                <img src="./img/logo_bottom.svg" alt="kaidi_logo">
             </div>
 
             <div class="footer_item">
