--- a/contact.html
+++ b/contact.html
@@ -58,11 +58,9 @@
                     <!-- <img src="img/資產 4.svg" srcset="img/資產 4.svg 500w, img/資產 6.svg 1000w" /> -->
                     <picture>
 
-                        <source media="(max-width: 768px)" srcset="https://kaidi-tech.com/img/logo_header_small.svg"
-                            width="181px" height="150px" />
+                        <source srcset="https://www.kaidi-tech.com/img/2022LOGO-3.svg" media="(max-width: 1050px)">
 
-                        <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
-
+                        <img src="img/logo_top.svg" alt="kaidi_logo">
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
                 </a>
@@ -176,8 +174,8 @@
         <div >
 
             <div style="display: flex;align-items:center;justify-content:center ">
-                <div style=" text-align: center;width: 700px;">
-                    <div style="margin: 30px 0; position: relative;padding-bottom: 60%;overflow: hidden;">
+                <div style=" text-align: center;width: 1000px;">
+                    <div style="margin: 30px 0; position: relative;padding-bottom: 60%;overflow: hidden;width: 100%;">
                         <!-- z-index: -1; -->
                         <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14454.542733148292!2d121.4941663!3d25.0803343!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa77983cf5b8aba2e!2z5oS36L-q56CU55m856eR5oqA5pyJ6ZmQ5YWs5Y-4!5e0!3m2!1szh-TW!2stw!4v1620626675946!5m2!1szh-TW!2stw"
@@ -186,7 +184,7 @@
                             top: 0;
                             left: 0;
                             width: 100%;
-                            height: 100%; "></iframe>
+                            height: 60%; "></iframe>
                     </div>
 
                     <h3>愷迪研發科技有限公司</h3>
@@ -221,7 +219,7 @@
     <footer>
         <div class="footer_group">
             <div class="footer_logo">
-                <img src="./img/logo_footer.svg" alt="kaidi_logo">
+                <img src="./img/logo_bottom.svg" alt="kaidi_logo">
             </div>
 
             <div class="footer_item">
