--- a/product.html
+++ b/product.html
@@ -86,7 +86,7 @@
     </style>
 
     <!-- 瀏覽人數 -->
-    <!-- <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
 
 </head>
@@ -103,7 +103,7 @@
                         <source media="(max-width: 768px)" srcset="https://kaidi-tech.com/img/logo_header_small.svg"
                             width="181px" height="150px" />
 
-                        <img src="img/logo_header_big.svg" alt="kaidi_logo" style="width:auto;">
+                        <img src="img/logo_top.svg" alt="kaidi_logo" style="width:auto;">
 
                     </picture>
                     <!-- <img src="./img/資產 4.svg" alt="kaidi_logo"> -->
@@ -409,7 +409,7 @@
     <footer>
         <div class="footer_group">
             <div class="footer_logo">
-                <img src="./img/logo_footer.svg" alt="kaidi_logo">
+                <img src="./img/logo_bottom.svg" alt="kaidi_logo">
             </div>
 
             <div class="footer_item">
