--- a/product.html
+++ b/product.html
@@ -478,7 +478,7 @@
         <div class="footer_end">
             <p>© 2020 臺灣愷迪研發科技股份有限公司版權所有。 | Designed by KD.<br>
             </p>
-            <!-- <div>
+            <div>
                     <span id="busuanzi_container_site_pv">
                         本站總訪問量<span id="busuanzi_value_site_pv"></span>次
                     </span>
@@ -487,7 +487,7 @@
                     <span id="busuanzi_container_site_uv">
                       本站訪客數<span id="busuanzi_value_site_uv"></span>人次
                     </span>
-                </div> -->
+                </div>
         </div>
 
     </footer>
