--- a/product.html
+++ b/product.html
@@ -100,8 +100,7 @@
                     <!-- <img src="img/資產 4.svg" srcset="img/資產 4.svg 500w, img/資產 6.svg 1000w" /> -->
                     <picture>
 
-                        <source media="(max-width: 768px)" srcset="https://kaidi-tech.com/img/logo_header_small.svg"
-                            width="181px" height="150px" />
+                        <source srcset="https://www.kaidi-tech.com/img/2022LOGO-3.svg" media="(max-width: 1050px)">
 
                         <img src="img/logo_top.svg" alt="kaidi_logo" style="width:auto;">
 
